<resources>

    <string name="app_name">FinanScan</string>
    <string name="app_details">Financial Data Scanner that Solves Financial Ratios</string>
    <string name="scan">Scan Document</string>
    <string name="upload">Upload PDF</string>
    <string name="compute_ratio">Compute Ratio</string>
    <string name="upload_pdf">Upload PDF</string>
    <string name="settings">Settings</string>
    <string name="text_recognition">Text Recognition</string>

</resources>