<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Settings"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        app:icon="@drawable/round_app_settings_alt_24"
        app:iconTint="@color/white"
        android:backgroundTint="@color/grey"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/img_scanResult"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:background="@color/dark"
        app:layout_constraintTop_toBottomOf="@id/btn_Settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_pdf"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:backgroundTint="@color/green"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/img_scanResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginTop="-400dp"
        app:layout_constraintTop_toBottomOf="@id/img_scanResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_extracted_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Extracted text will appear here..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@android:color/white"
            android:scrollbars="vertical" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Compute"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/compute_ratio"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:backgroundTint="@color/green"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>