<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_txtRecognition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_recognition"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            app:icon="@drawable/round_app_settings_alt_24"
            app:iconTint="@color/white"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_scanResult"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:background="@color/dark"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_startScan"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:backgroundTint="@color/green"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/img_scanResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginTop="-400dp"
        app:layout_constraintTop_toBottomOf="@id/img_scanResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_extracted_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Extracted text will appear here..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@android:color/white"
            android:scrollbars="vertical" />

    </ScrollView>

    <ScrollView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginTop="-400dp"
        app:layout_constraintTop_toBottomOf="@id/img_scanResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_raw_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Raw text will appear here..."
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@android:color/white"
            android:scrollbars="vertical" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Compute"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/compute_ratio"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:backgroundTint="@color/green"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_startScan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>